# boomer-shot

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
extension/: extension.js  metadata.json
extension/schemas/: org.gnome.shell.extensions.boomer-shot.gschema.xml
src/: ai.py  canvas.py  clipboard.py  editor.py  file_saver.py  main.py  style.css  utils.py
tests/: test_api_compatibility.py  test_canvas.py
