[project]
name = "boomer-shot"
version = "0.1.0"
description = "A premium GNOME + Wayland desktop screenshot and snipping tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
